# finm32500_Assignments

./: .gitignore  .gitmodules  README.md  market_data.csv  pyproject.toml  trade_log.csv
Assignment1/: data_loader.py  engine-maisha.py  engine.py  main.py  market_data.csv  models.py  performance.ipynb  performance.md  reporting.py  strategies.py
Assignment10/: comparison.md  data_loader.py  main.py  market_data.db  parquet_storage.py  pyproject.toml  sqlite_storage.py
Assignment11/: README.md  backtest.py  comparison.md  feature_engineering.py  features_config.json  model_params.json  signal_generator.py  tickers-1.csv  train_model.py
Assignment2/: .gitignore  BenchmarkStrategy.py  MACDStrategy.py  MovingAverageStrategy.py  PriceLoader.py  RSIStrategy.py  Strategy.py  StrategyComparison.ipynb  VolatilityBreakoutStrategy.py  main.py
Assignment3/: NaiveMovingAverageStrategy.py  Strategy.py  WindowedMovingAverageStrategy.py  complexity_report.md  data_loader.py  main.py  models.py  profiler.ipynb  strategies.py
Assignment7/: README.md  data_loader.py  metrics.py  parallel.py  portfolio_agg.py  reporting.py
Assignment7/data/: parallel.py  (+1 more)
Assignment8/: README.md  gateway.py  main.py  order_manager.py  orderbook.py  performance_report.md  shared_memory_utils.py  strategy.py
Assignment9/: fix_parser.py  logger.py  main.py  order.py  risk_engine.py
EndToEnd/: Alpaca.py  AlpacaDataFetcher.py  DataCleaner.py  Gateway.py  MatchingEngine.py  Momentum.py  NewStrategy.py  OrderBook.py  OrderManager.py  PriceLoader.py  StrategyBacktesting.ipynb  main.py  run.py
(+1516 files in other folders)
