[project]
name = "finm32500-assignments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=7.1.0",
    "jupyterlab>=4.5.0",
    "lxml>=6.0.2",
    "memory-profiler>=0.61.0",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
    "yfinance>=0.2.66",
]
